nav and pages added, contact form functionality needs updated

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -4,11 +4,11 @@
       <span class="text-crazy">[ </span>Experience<span class="text-crazy"> ]</span>
   </h1>
   
-    <ol class="relative border-l border-gray-200 dark:border-gray-700 text-lg">
+    <ol class="relative border-l border-lime-600 dark:border-lime-600 text-lg">
       <!-- Your work experience starts here -->
       <li class="mb-10 ml-4">
         <div
-          class="absolute w-3 h-3 bg-gray-200 rounded-full mt-2 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
+          class="absolute w-3 h-3 bg-lime-600 rounded-full mt-2 -left-1.5 border border-crazy dark:border-lime-600 dark:bg-lime-600">
         </div>
         <time class="mb-1 text-sm font-normal md:text-lg leading-none text-secondary">Sep 2023 - Present</time>
         <h3 class="text-xl md:text-2xl font-semibold text-secondary">Software Developer at Brem (Full-Time)</h3>
@@ -17,7 +17,7 @@
       </li>
       <li class="mb-10 ml-4">
         <div
-          class="absolute w-3 h-3 bg-gray-200 rounded-full mt-2 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
+          class="absolute w-3 h-3 bg-lime-600 rounded-full mt-2 -left-1.5 border border-white dark:border-lime-600 dark:bg-lime-600">
         </div>
         <time class="mb-1 text-sm md:text-lg font-normal leading-none text-secondary">Jun 2023 - Sep 2023</time>
         <h3 class="text-xl font-semibold md:text-2xl text-secondary">Programmer at Grace Health (Promoted) </h3>
@@ -26,7 +26,7 @@
         </li>
       <li class="mb-10 ml-4">
         <div
-          class="absolute w-3 h-3 bg-gray-200 rounded-full mt-2 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
+          class="absolute w-3 h-3 bg-lime-600 rounded-full mt-2 -left-1.5 border border-white dark:border-lime-600 dark:bg-lime-600">
         </div>
         <time class="mb-1 text-sm font-normal leading-none md:text-lg text-secondary">Feb 2023 - Jun 2023</time>
         <h3 class="text-xl font-semibold text-secondary md:text-2xl">Programmer Analyst + Report Writer</h3>
@@ -35,7 +35,7 @@
       </li>
       <li class="mb-10 ml-4">
         <div
-          class="absolute w-3 h-3 bg-gray-200 rounded-full mt-2 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
+          class="absolute w-3 h-3 bg-lime-600 rounded-full mt-2 -left-1.5 border border-white dark:border-lime-600 dark:bg-lime-600">
         </div>
         <time class="mb-1 text-sm font-normal leading-none text-secondary md:text-lg">Dec 2022 - Present </time>
         <h3 class="text-xl font-semibold text-secondary md:text-2xl">Cyber Incident Reporter at State of Indiana (Contract)</h3>
@@ -44,7 +44,7 @@
       </li>
       <li class="mb-10 ml-4">
         <div
-          class="absolute w-3 h-3 bg-gray-200 rounded-full mt-2 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
+          class="absolute w-3 h-3 bg-lime-600 rounded-full mt-2 -left-1.5 border border-white dark:border-lime-600 dark:bg-lime-600">
         </div>
         <time class="mb-1 text-sm font-normal leading-none text-secondary md:text-lg">Oct 2022 - Present</time>
         <h3 class="text-xl font-semibold text-secondary md:text-2xl">Software Developer at Brem (Contract)</h3>
@@ -53,7 +53,7 @@
       </li>
       <li class="mb-10 ml-4">
         <div
-          class="absolute w-3 h-3 bg-gray-200 rounded-full mt-2 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
+          class="absolute w-3 h-3 bg-lime-600 rounded-full mt-2 -left-1.5 border border-white dark:border-lime-600 dark:bg-lime-600">
         </div>
         <time class="mb-1 text-sm font-normal leading-none text-secondary md:text-lg">Mar 2022 - Present</time>
         <h3 class="text-xl font-semibold text-secondary md:text-2xl">Engineer at United States Army Reserve</h3>
@@ -62,7 +62,7 @@
       </li>
       <li class="mb-10 ml-4">
         <div
-          class="absolute w-3 h-3 bg-gray-200 rounded-full mt-2 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
+          class="absolute w-3 h-3 bg-lime-600 rounded-full mt-2 -left-1.5 border border-white dark:border-lime-600 dark:bg-lime-600">
         </div>
         <time class="mb-1 text-sm font-normal leading-none text-secondary md:text-lg">Apr 2020 - Mar 2022</time>
         <h3 class="text-xl font-semibold text-secondary md:text-2xl">Owner at Conley Scapes</h3>
