--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -53,7 +53,7 @@ import { ViewTransitions } from 'astro:transitions';
 
   </head>
   <body class="bg-base">
-
+    <ViewTransitions  />
 
     <slot />
   </body>
