--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
 import Base from "../layouts/Base.astro";
-import Experience from "../components/Experience.astro";
 import Education from "../components/Education.astro";
 import Hero from "../components/Hero.astro";
 import Footer from "../components/Footer.astro";
@@ -11,13 +10,13 @@ import Test from "../components/Test.astro";
 ---
 
 <Base title="Joshua P. Conley">
-  <Typewriter class="typewriter-element" />
+  <!-- <Typewriter class="typewriter-element" /> -->
   <Hero />
   <!-- <Test /> -->
-  <Experience />
+  <!-- <Experience />
   <Work />
   <Education />
-  <Footer />
+  <Footer /> -->
 
   <script>
     document.addEventListener("DOMContentLoaded", function () {
