--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -4,11 +4,11 @@
       <span class="text-crazy">[ </span>Education & Certifications<span class="text-crazy"> ]</span>
   </h1>
   
-    <ol class="relative border-l border-lime-600 text-lg">
-      <!-- Your education information starts here -->
+  <ol class="relative border-l border-lime-600 dark:border-lime-600 text-lg">
+    <!-- Your education information starts here -->
       <li class="mb-10 ml-4">
         <div
-        class="absolute w-3 h-3 bg-lime-600 border-lime-600 rounded-full mt-2 -left-1.5 ">
+        class="absolute w-3 h-3 bg-lime-600 rounded-full mt-2 -left-1.5 border border-crazy dark:border-lime-600 dark:bg-lime-600">
       </div>
         <time class="mb-1 text-sm font-normal md:text-lg leading-none text-secondary">Sep 2019 - Dec 2022</time>
         <h3 class="text-xl md:text-2xl font-semibold text-secondary">Associate of Applied Science - AAS, Computer Science</h3>
@@ -24,7 +24,7 @@
       <!-- Your certifications start here -->
       <li class="mb-10 ml-4">
         <div
-        class="absolute w-3 h-3 bg-lime-600 border-lime-600 rounded-full mt-2 -left-1.5 ">
+        class="absolute w-3 h-3 bg-lime-600 rounded-full mt-2 -left-1.5 border border-crazy dark:border-lime-600 dark:bg-lime-600">
       </div>
         <time class="mb-1 text-sm font-normal md:text-lg leading-none text-secondary">Issued Jan 2023</time>
         <h3 class="text-xl md:text-2xl font-semibold text-secondary">Google Data Analytics Certification</h3>
@@ -36,7 +36,7 @@
       </li>
       <li class="mb-10 ml-4">
         <div
-        class="absolute w-3 h-3  rounded-full mt-2 -left-1.5 bg-lime-600 border-lime-600">
+        class="absolute w-3 h-3 bg-lime-600 rounded-full mt-2 -left-1.5 border border-crazy dark:border-lime-600 dark:bg-lime-600">
       </div>
         <time class="mb-1 text-sm font-normal md:text-lg leading-none text-secondary">Issued Jan 2023</time>
         <h3 class="text-xl md:text-2xl font-semibold text-secondary">Google Finance Data Analyst Certification</h3>
@@ -47,7 +47,7 @@
       </li>
       <li class="mb-10 ml-4">
         <div
-        class="absolute w-3 h-3 bg-lime-600 border-lime-600 rounded-full mt-2 -left-1.5 ">
+        class="absolute w-3 h-3 bg-lime-600 rounded-full mt-2 -left-1.5 border border-crazy dark:border-lime-600 dark:bg-lime-600">
       </div>
         <time class="mb-1 text-sm font-normal md:text-lg leading-none text-secondary">Issued Dec 2022</time>
         <h3 class="text-xl md:text-2xl font-semibold text-secondary">Meta Front-End Development</h3>
