--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,59 +1,147 @@
----
+<div class="flex flex-col min-h-screen">
+  <!-- Navigation -->
+  <nav class="w-full py-4">
+    <ul
+      class="flex justify-center space-x-4 p-4 text-[18px] md:text-2xl font-light pirata-font underline decoration-lime-600"
+    >
+      <li><a href="/" class="nav-link">Home</a></li>
+      <li><a href="/projects" class="nav-link">Projects</a></li>
+      <li><a href="/experience" class="nav-link">Experience</a></li>
+      <li><a href="/education" class="nav-link">Education</a></li>
+      <li><a href="/contact" class="nav-link">Contact</a></li>
 
----
+    </ul>
+  </nav>
 
-<div class="min-h-screen">
-  <div class="hero">
-    <div class="max-w-lg">
-      <h1 class="text-secondary text-6xl md:text-8xl font-extrabold pb-4 text-center pirata-font">
+  <!-- Main Hero Content -->
+  <div class="hero flex-grow">
+    <div class="max-w-lg mx-auto text-center">
+      <h1
+        class="text-secondary text-6xl md:text-8xl font-extrabold pb-4 pirata-font"
+      >
         Hi, I'm <strong class="underline decoration-lime-600">Joshua.</strong>
       </h1>
-      
-        <!-- <svg class="w-16 h-16 text-secondary inline-block align-middle ml-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 20">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1v18M1 3.652v9c5.6-5.223 8.4 2.49 14-.08v-9c-5.6 2.57-8.4-5.143-14 .08Z"/>
-        </svg> -->
-    </h1>
-    
-      <h2 class="text-secondary text-xl md:text-4xl text-center pirata-font">Kalamazoo, MI</h2>
-      <p class="py-6 px-4 text-center text-secondary text-[16px] md:text-2xl font-light md:text-center pirata-font">
-        I'm a full-stack developer by day, <br class="md:hidden underline"> code wizard by night,and a 
-        <strong class="underline decoration-lime-600">professional coffee drinker.</strong>
+      <h2 class="text-secondary text-xl md:text-4xl pirata-font">
+        Kalamazoo, MI
+      </h2>
+      <p
+        class="py-6 px-4 text-secondary text-[16px] md:text-2xl font-light pirata-font"
+      >
+        I'm a full-stack developer by day, <br class="md:hidden underline" />
+        code wizard by night,and a
+        <strong class="underline decoration-lime-600"
+          >professional coffee drinker.</strong
+        >
       </p>
-      <div class="text-center py-4">
-        <div class="flex justify-center transition duration-300 ease-in-out">
-          <a href="https://www.linkedin.com/in/joshua-conley-dev/" class="hover:opacity-75">
-            <svg class="w-8 h-8 md:h-12 md:w-12 text-secondary inline-block cursor-pointer" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 15 15">
-              <path fill-rule="evenodd" d="M7.979 5v1.586a3.5 3.5 0 0 1 3.082-1.574C14.3 5.012 15 7.03 15 9.655V15h-3v-4.738c0-1.13-.229-2.584-1.995-2.584-1.713 0-2.005 1.23-2.005 2.5V15H5.009V5h2.97ZM3 2.487a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z" clip-rule="evenodd"/>
-              <path d="M3 5.012H0V15h3V5.012Z"/>
+      <div class="py-4">
+        <div class="flex justify-center space-x-4">
+          <a
+            href="https://www.linkedin.com/in/joshua-conley-dev/"
+            class="hover:opacity-75"
+          >
+            <svg
+              class="w-8 h-8 md:h-12 md:w-12 text-secondary inline-block cursor-pointer"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="currentColor"
+              viewBox="0 0 15 15"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M7.979 5v1.586a3.5 3.5 0 0 1 3.082-1.574C14.3 5.012 15 7.03 15 9.655V15h-3v-4.738c0-1.13-.229-2.584-1.995-2.584-1.713 0-2.005 1.23-2.005 2.5V15H5.009V5h2.97ZM3 2.487a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
+                clip-rule="evenodd"></path>
+              <path d="M3 5.012H0V15h3V5.012Z"></path>
             </svg>
           </a>
-        </div>
-        <div class="flex justify-center py-4 transition duration-300 ease-in-out">
           <a href="https://github.com/jpcc0" class="hover:opacity-75">
-            <svg class="w-8 h-8 md:h-12 md:w-12 text-secondary inline-block cursor-pointer" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-              <path fill-rule="evenodd" d="M10 .333A9.911 9.911 0 0 0 6.866 19.65c.5.092.678-.215.678-.477 0-.237-.10-1.017-.014-1.845-2.757.6-3.338-1.169-3.338-1.169a2.627 2.627 0 0 0-1.1-1.451c-.9-.615.07-.6.07-.6a2.084 2.084 0 0 1 1.518 1.021 2.11 2.11 0 0 0 2.884.823c.044-.503.268-.973.63-1.325-2.2-.25-4.516-1.1-4.516-4.9A3.832 3.832 0 0 1 4.7 7.068a3.56 3.56 0 0 1 .095-2.623s.832-.266 2.726 1.016a9.409 9.409 0 0 1 4.962 0c1.89-1.282 2.717-1.016 2.717-1.016.366.83.402 1.768.1 2.623a3.827 3.827 0 0 1 1.02 2.659c0 3.807-2.319 4.644-4.525 4.889a2.366 2.366 0 0 1 .673 1.834c0 1.326-.012 2.394-.012 2.72 0 .263.18.572.681.475A9.911 9.911 0 0 0 10 .333Z" clip-rule="evenodd"/>
+            <svg
+              class="w-8 h-8 md:h-12 md:w-12 text-secondary inline-block cursor-pointer"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="currentColor"
+              viewBox="0 0 20 20"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M10 .333A9.911 9.911 0 0 0 6.866 19.65c.5.092.678-.215.678-.477 0-.237-.10-1.017-.014-1.845-2.757.6-3.338-1.169-3.338-1.169a2.627 2.627 0 0 0-1.1-1.451c-.9-.615.07-.6.07-.6a2.084 2.084 0 0 1 1.518 1.021 2.11 2.11 0 0 0 2.884.823c.044-.503.268-.973.63-1.325-2.2-.25-4.516-1.1-4.516-4.9A3.832 3.832 0 0 1 4.7 7.068a3.56 3.56 0 0 1 .095-2.623s.832-.266 2.726 1.016a9.409 9.409 0 0 1 4.962 0c1.89-1.282 2.717-1.016 2.717-1.016.366.83.402 1.768.1 2.623a3.827 3.827 0 0 1 1.02 2.659c0 3.807-2.319 4.644-4.525 4.889a2.366 2.366 0 0 1 .673 1.834c0 1.326-.012 2.394-.012 2.72 0 .263.18.572.681.475A9.911 9.911 0 0 0 10 .333Z"
+                clip-rule="evenodd"></path>
             </svg>
           </a>
         </div>
       </div>
     </div>
   </div>
+
+  <!-- Footer -->
+  <footer class="text-secondary py-4">
+    <div class="container mx-auto flex items-center justify-center space-x-4">
+      <!-- LinkedIn Icon -->
+      <a
+        href="YOUR_LINKEDIN_PROFILE_URL"
+        class="text-secondary hover:text-blue-500"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <!-- Your LinkedIn SVG code -->
+        </svg>
+      </a>
+
+      <!-- GitHub Icon -->
+      <a
+        href="YOUR_GITHUB_PROFILE_URL"
+        class="text-secondary stroke-white hover:text-green-400"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <!-- Your GitHub SVG code -->
+        </svg>
+      </a>
+    </div>
+
+    <!-- Copyright Text -->
+    <div class="text-center mt-4 pirata-font underline decoration-lime-600">
+      &copy; 2023 Joshua P. Conley. All rights reserved.
+    </div>
+  </footer>
 </div>
+
 <style>
-	.hero {
-			/* Set the background to transparent */
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			height: 100vh;
-			overflow: hidden;
-			position: relative;
-	}
+  .screen-content {
+    min-height: calc(100vh - (py-4 * 2)); /* Adjust for padding in nav */
+  }
+
+  .hero {
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(
+      80% - (py-4 * 2)
+    ); /* Adjust for padding in text-secondary py-4 */
+    overflow: hidden;
+    position: relative;
+  }
+
   .pirata-font {
     font-family: "Pirata One", sans-serif;
-/* 
-  white-space: nowrap;
-  color: lime;              Bright green text color */
-
   }
-</style> 
+  .nav-link {
+    text-decoration: none;
+    color: #f6f8e2; /* Your 'secondary' color */
+    transition: color 300ms ease;
+  }
+
+  .nav-link:hover {
+    color: #9ccd62; /* Your 'crazy' color */
+  }
+</style>
