--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -11,7 +11,7 @@
         class="absolute w-3 h-3 bg-lime-600 rounded-full mt-2 -left-1.5 border border-crazy dark:border-lime-600 dark:bg-lime-600">
       </div>
         <time class="mb-1 text-sm font-normal md:text-lg leading-none text-secondary">Sep 2019 - Dec 2022</time>
-        <h3 class="text-xl md:text-2xl font-semibold text-secondary">Associate of Applied Science - AAS, Computer Science</h3>
+        <h3 class="text-xl md:text-2xl font-semibold text-secondary">KVCC • Associate of Applied Science - AAS, Computer Science</h3>
         <p class="mb-4 text-base md:text-xl font-normal text-secondary">Computer scientists design and develop the software programs that IT professionals use and maintain. Computer science emphasizes the software aspects both in theory and application rather than the physical construction of computers (hardware aspects). The computer science program includes core courses in programming, systems, algorithms, databases, web technologies, and software product development.</p>
         <p class="mb-4 text-base md:text-xl font-normal text-secondary">Skills: VMware · CLI · Front-End Development · Visual Studio · Node.js · Linux · Bootstrap · Git · Java</p>
         <div class="mt-2">
