--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Test from "../components/Test.astro";
 ---
 
 <Base title="Joshua P. Conley">
-  <Typewriter class="typewriter-element" />
+  <!-- <Typewriter class="typewriter-element" /> -->
   <Hero />
   <!-- <Test /> -->
   <!-- <Experience />
