--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,7 +2,7 @@
 import Base from "../layouts/Base.astro";
 import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
-import Contact from "../components/Contact.astro";
+import Contact from "../components/Contact.svelte";
 ---
 
 <Base title="Joshua P. Conley">
