--- a/src/pages/education.astro
+++ b/src/pages/education.astro
@@ -6,7 +6,7 @@ import Education from "../components/Education.astro";
 ---
 
 <Base title="Joshua P. Conley">
-  <Nav />
+  <!-- <Nav /> -->
   <Education />
   <Footer />
 </Base>
