--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -6,7 +6,7 @@ import Experience from "../components/Experience.astro";
 ---
 
 <Base title="Joshua P. Conley">
-  <Nav />
+  <!-- <Nav /> -->
   <Experience />
   <Footer />
 </Base>
