--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -8,7 +8,7 @@
       <li><a href="/projects" class="nav-link">Projects</a></li>
       <li><a href="/experience" class="nav-link">Experience</a></li>
       <li><a href="/education" class="nav-link">Education</a></li>
-      <li><a href="/contact" class="nav-link">Contact</a></li>
+      <!-- <li><a href="/contact" class="nav-link">Contact</a></li> -->
 
     </ul>
   </nav>
