--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,7 +6,7 @@ import Footer from "../components/Footer.astro";
 ---
 
 <Base title="Joshua P. Conley">
-  <Nav />
+  <!-- <Nav /> -->
   <Work />
   <Footer />
 </Base>
