revert font and text size, renovate readme / add preview photo

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,11 +17,12 @@
   <div class="hero flex-grow">
     <div class="max-w-lg mx-auto text-center">
       <h1
-        class="text-secondary text-6xl md:text-7xl font-extrabold pb-4 pirata-font"
+        class="text-secondary text-6xl md:text-8xl font-extrabold pb-4 pirata-font"
       >
         Hi, I'm <strong class="underline decoration-lime-600">Joshua.</strong>
       </h1>
-      <h2 class="text-secondary text-xl md:text-4xl pirata-font">
+      <h2 class="text-secondary text-xl md:text-4xl pirata-font" 
+      >
         Kalamazoo, MI
       </h2>
       <p
@@ -34,13 +35,13 @@
         >
       </p>
       <div class="py-4">
-        <div class="flex justify-center space-x-4">
+        <div class="flex justify-center space-x-4" >
           <a
             href="https://www.linkedin.com/in/joshua-conley-dev/"
             class="hover:opacity-75"
           >
             <svg
-              class="w-8 h-8 md:h-12 md:w-12 text-secondary inline-block cursor-pointer"
+              class="w-8 h-8 md:h-12 md:w-12 text-secondary inline-block cursor-pointer transition duration-300"
               aria-hidden="true"
               xmlns="http://www.w3.org/2000/svg"
               fill="currentColor"
