--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -36,7 +36,7 @@ import { ViewTransitions } from 'astro:transitions';
     ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100&family=Quicksand:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pirata+One&family=Pixelify+Sans&display=swap" rel="stylesheet">
     
     <link
       rel="stylesheet"
@@ -130,7 +130,7 @@ import { ViewTransitions } from 'astro:transitions';
   }
 
   .pirata-font {
-    font-family: "DM Sans", sans-serif;
+    font-family: "Pirata One", sans-serif;
     border-right: 0.15em solid lime; 
   white-space: nowrap;
   color: lime;           
