--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -52,12 +52,21 @@
   
     <ol class="relative border-l border-lime-600 dark:border-lime-600 text-lg">
       <!-- Your work experience starts here -->
+ 	<li class="mb-10 ml-4">
+        <div
+          class="absolute w-3 h-3 bg-lime-600 rounded-full mt-2 -left-1.5 border border-crazy dark:border-lime-600 dark:bg-lime-600">
+        </div>
+        <time class="mb-1 text-sm font-normal md:text-lg leading-none text-secondary">Nov 2023 - Present</time>
+        <h3 class="text-xl md:text-2xl font-semibold text-secondary">Application Developer at Amyx Inc. (Full-Time)</h3>
+        <p class="mb-4 text-base  md:text-xl font-normal text-secondary">Support a diverse portfolio of software applications, 
+	encompassing commercial, Department of Defense (DoD/DLA) supplied, and proprietary systems, ensuring seamless functionality across both current and legacy platforms.</p>
+      </li>
       <li class="mb-10 ml-4">
         <div
           class="absolute w-3 h-3 bg-lime-600 rounded-full mt-2 -left-1.5 border border-crazy dark:border-lime-600 dark:bg-lime-600">
         </div>
         <time class="mb-1 text-sm font-normal md:text-lg leading-none text-secondary">Sep 2023 - Present</time>
-        <h3 class="text-xl md:text-2xl font-semibold text-secondary">Software Developer at Brem (Full-Time)</h3>
+        <h3 class="text-xl md:text-2xl font-semibold text-secondary">Software Developer at Brem (Contract)</h3>
         <p class="mb-4 text-base  md:text-xl font-normal text-secondary">Design, implement, and maintain software
           applications utilizing Django, Laravel, PHP, SwiftUI, and more.</p>
       </li>
