Updated LinkedIn link

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -37,7 +37,7 @@
       <div class="py-4">
         <div class="flex justify-center space-x-4" >
           <a
-            href="https://www.linkedin.com/in/joshua-conley-dev/"
+            href="https://www.linkedin.com/in/joshuapconley/"
             class="hover:opacity-75"
           >
             <svg
